fix filter spacing

--- a/_sass/_navfilter.scss
+++ b/_sass/_navfilter.scss
@@ -1,47 +1,46 @@
 .nav--filter {
-	list-style: none;
-	padding: 30px 0;
-    margin-top: 30px;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    margin-bottom: 30px;
+  list-style: none;
+  padding: 30px 0;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  margin: 30px auto;
 
-	li {
-		margin-bottom: 12px;
-		text-align: center;
+  li {
+    margin-bottom: 12px;
+    text-align: center;
 
-		@media(min-width: $tablet){
-			margin-bottom: 0;
-			margin-right: 20px;
+    @media (min-width: $tablet) {
+      margin-bottom: 0;
+      margin-right: 20px;
 
-			&:last-child {
-				margin-right: 0;
-			}
-		}
+      &:last-child {
+        margin-right: 0;
+      }
+    }
 
-		&:last-child {
-			margin-bottom: 0;
-		}
-	}
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 
-	a {
-		color: #0f1237;
-		font-size: 18px;
-		text-decoration: none;
-		cursor: pointer;
+  a {
+    color: #0f1237;
+    font-size: 18px;
+    text-decoration: none;
+    cursor: pointer;
 
-		&.active, &:hover {
-			text-decoration: underline;
-		}
-	}
+    &.active,
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 
-	@media(min-width: $tablet){
-		display: flex;
-		justify-content: center;
-		margin: auto;
-	}
+  @media (min-width: $tablet) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .filter-item.hidden {
-	display: none;
+  display: none;
 }
